<resources>
    <string name="app_name">Chupapp</string>

    <!--Game modes-->
    <string name="game_mode_1">Single phone</string>
    <string name="game_mode_2">Multi-phone</string>

    <!--Games-->
    <string name="game_set_1">Drink-up</string>
    <string name="game_set_2">Kings</string>
    <string name="game_set_3">Beer pong</string>
    <string name="game_set_4">Game_4</string>
    <string name="game_set_5">Game_5</string>
    <string name="game_set_6">Game_6</string>
    <string name="game_set_7">Game_7</string>
    <string name="game_set_8">Game_8</string>

    <!--Buttons-->
    <string name="button_createMatch">Crear partida</string>
    <string name="button_joinMatch">Unirse a partida</string>

    <string name="tv_enterPin">Ingrese el pin:</string>
</resources>
